Fixed layout issues of dropdown button in IE6/7, fixes #6010
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@12745 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/nihilo/form/Button.css
+++ b/themes/nihilo/form/Button.css
@@ -89,12 +89,10 @@
 .nihilo .dijitArrowButtonInner {
 	background:url("../images/spriteArrows.png") no-repeat left top;
 	width: 11px;
-	margin: 0 auto 0 auto;
 }
 .nihilo .dijitUpArrowButton .dijitArrowButtonInner { 
 	background:url("../images/spriteArrows.png") no-repeat -22px top; 
 	width: 11px;
-	margin: 0 auto 2px auto;
 }
 .dj_ie6 .nihilo .dijitArrowButtonInner {
 	background:url("../images/spriteArrows.gif") no-repeat left top;
